--- a/Showtimes.html
+++ b/Showtimes.html
@@ -99,6 +99,37 @@
             </div>
         </div>
     </div>
+
+    <div class="trailer-container">
+        <iframe class="trailer" width="560" height="315" src="https://www.youtube.com/embed/8YjFbMbfXaQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="container">
+        <div class="showtimes-sub-title">
+            <p class="movie-duration">
+                2 HR 12 MIN
+            </p>
+            <p> || </p>
+            <p class="age-category">
+                PG13
+            </p>
+        </div>
+
+        <div class="movie-descripton-container">
+            <p class="description-header">
+                A Marvel legend will rise.
+            </p>
+            <p class="description">
+                Marvel Studios’ “Shang-Chi and The Legend of The Ten Rings” stars Simu Liu as Shang-Chi, 
+                who must confront the past he thought he left behind when he is drawn into the web of the 
+                mysterious Ten Rings organization. The film also stars Tony Leung as Wenwu, Awkwafina as 
+                Shang-Chi’s friend Katy and Michelle Yeoh as Jiang Nan, as well as Fala Chen, Meng’er Zhang, 
+                Florian Munteanu and Ronny Chieng.
+            </p>
+        </div>
+
+    </div>
+
     <div class="footer">
         <a href="pick-ticket-type.html" class="continue">
             Continue <i class="fas fa-chevron-right"></i>
