--- a/confrim-order.html
+++ b/confrim-order.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/confirm-order.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Confirm Order</title>
 </head>
@@ -24,7 +26,7 @@
     <div class="movie-description">
         <div class="movie-img"><img src="images/shang chi circle.webp"></div>
         <div class="movie-info-container">
-            <div class="movie-title">Shang-Chi and the Ledgend of the Ten Rings</div>
+            <div class="movie-title">Shang-Chi and the Legend of the Ten Rings</div>
             <div class="movie-info">E Booking Cenima Athens GA | TOMORROW SEP 24, 2021 | 3:15 PM | CLOSED CAPTION</div>
         </div>
     </div>
@@ -38,8 +40,8 @@
                     Join now and enjoy the wonders of our premium subscription deal.
                 </p>
                 <div class="button-container">
-                    <button class="sign-in">Sign In</button>
-                    <button class="join-now">Join Now</button>
+                    <a href="login.html" class="sign-in">Sign In</a>
+                    <a href="create-account.html" class="sign-in">Join Now</a>
                 </div>
             </div>
             
@@ -61,7 +63,7 @@
                     <p>Total</p>
                 </div>
                 <div class="prices">
-                    <h3><a href="" class="edit">Edit</a></h3>
+                    <h3><a href="pick-ticket-type.html" class="edit">Edit</a></h3>
                     <br>
                     <br>
                     <p>$9.00</p>
@@ -79,7 +81,7 @@
     </div>
 
     <div class="footer">
-        <button class="footer-btn">Purchase</i></button>
+        <a href="checkout.html" class="footer-btn">Purchase</i></a>
     </div>
 
 
