--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 </div>
                 <input type="submit" value="Login" class="login-btn">
                 <a href="" class="forgot-pass">Forgot Password?</a>
-                <p>Not a member yet? <a href="" class="create-acct">Sign Up!</a></p>
+                <p>Not a member yet? <a href="create-account.html" class="create-acct">Sign Up!</a></p>
             </form>
         </div>
     </body>
