--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
             <div class="navbar-container">
                 <a href="index.html" class="go-back">
                     <button class="navbar-btn">
-                        <i class="fas fa-chevron-left"></i>
+                        <i class="fas fa-home"></i>
                     </button> 
                 </a>
                 <a href="index.html" class="navbar-btn exit">
