--- a/pick-ticket-type.html
+++ b/pick-ticket-type.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/pick-ticket-type.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Pick Ticket Type</title>
 </head>
@@ -28,7 +30,7 @@
     <div class="movie-description">
         <div class="movie-img"><img src="images/shang chi circle.webp"></div>
         <div class="movie-info-container">
-            <div class="movie-title">Shang-Chi and the Ledgend of the Ten Rings</div>
+            <div class="movie-title">Shang-Chi and the Legend of the Ten Rings</div>
             <div class="movie-info">E Booking Cenima Athens GA | TOMORROW SEP 24, 2021 | 3:15 PM | CLOSED CAPTION</div>
         </div>
     </div>
