--- a/select-seats.html
+++ b/select-seats.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/select-seats.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Select Seats</title>
 </head>
@@ -190,7 +193,7 @@
     </div>
 
     <div class="footer">
-        <button class="footer-btn">Continue <i class="fas fa-chevron-right"></i></button>
+        <a href="confrim-order.html" class="footer-btn">Continue <i class="fas fa-chevron-right"></i></a>
     </div>
 
 
